addressed new comments